--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+#enter the correct values for the following variables
 OPENAI_API_KEY=your_openai_api_key_here
 
 REDDIT_CLIENT_ID=your_reddit_client_id_here
